--- a/index.html
+++ b/index.html
@@ -2,13 +2,46 @@
 
 <head>
     <title>P&aacute;gina Pessoal do Augusto</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
 <body>
 
-    <img src="imagens/fotoPerfil.jpg" alt="Foto do perfil de José Augusto de Melo" class="foto-perfil">
+    <!-- <img src="imagens/fotoPerfil.jpg" alt="Foto do perfil de José Augusto de Melo" class="foto-perfil"> -->
 
     <br />
-</body>
 
+    <p class="titulo-nome">Jos&eacute; Augusto de Melo</p>
+
+    <p class="info-pessoais">Idade: 34 anos.</p>
+    <p class="info-pessoais">Celular: 62 9 98765 4321.</p>
+    <p class="info-pessoais">E-mail: joseaugustodemelo@ficticio.com.br.</p>
+    <p class="info-pessoais">Endere&ccedil;o: Rua do Lazer, Cidade da Alegria, Estado da Felicidade.</p>
+    <br />
+    <p class="subtitulo">Escolaridade:</p>
+    <ul class="itens">
+        <li>Gradua&ccedil;&atilde;o: Bacharel em Ci&ecirc;ncia da Computa&ccedil;&atilde;o | Anhanguera Educacional |
+            An&aacute;polis / GO | 2004 / 2007.</li>
+        <li>P&oacute;s-gradua&ccedil;&atilde;o: Especializa&ccedil;&atilde;o em Aplica&ccedil;&otilde;es Web e
+            M&oacute;vel | UFG Campus Samambaia - Goi&acirc;nia / GO | 2015</li>
+        <li>P&oacute;s-gradua&ccedil;&atilde;o: Especializa&ccedil;&atilde;o Lato Sensu em Doc&eacute;ncia na
+            Educa&ccedil;&atilde;o Profissional T&eacute;cnica e Tecnol&oacute;gica | IFG Campus Aparecida de
+            Goi&acirc;nia / GO | Cursando./li>
+    </ul>
+    <br />
+    <p class="subtitulo">Cursos Extracurriculres:</p>
+    <ul class="itens">
+        <li>Forma&ccedil;&atilde;o Java para Certifica&ccedil;&atilde;o | 140h | Supera Teconologia - Goi&aacute;nia |
+            2016</li>
+        <li>Legislação em Educação a Distância | 40h | CEAR - UEG An&aacute;polis | 2018</li>
+        <li>Tutoria em Educação a Distância | 90h | CEAR - UEG An&aacute;polis | 2018</li>
+    </ul>
+
+    <p class="subtitulo">Visite minhas redes sociais:</p>
+    <ul class="itens">
+        <li><a target="_blank" href="https://www.facebook.com/melojoseaugustode">Facebook</a> </li> 
+        <li><a target="_blank" href="https://twitter.com/jaugustodemelo">Twitter</a> </li> 
+        <li><a target="_blank" href="https://www.linkedin.com/in/joseaugustodemelo/">Linkedin</a> </li> 
+    </ul> 
+</body> 
 </html>
