--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>P&aacute;gina Pessoal do Augusto</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
 <body>
 
-    <!-- <img src="imagens/fotoPerfil.jpg" alt="Foto do perfil de José Augusto de Melo" class="foto-perfil"> -->
+    <img src="imagens/fotoPerfil.jpg" alt="Foto do perfil de José Augusto de Melo">
 
     <br />
 
